NetBSD Problem Report #52166
From www@NetBSD.org Sun Apr 16 12:21:44 2017
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
by mollari.NetBSD.org (Postfix) with ESMTPS id 1AA577A1F5
for <gnats-bugs@gnats.NetBSD.org>; Sun, 16 Apr 2017 12:21:44 +0000 (UTC)
Message-Id: <20170416122143.37D2A7A2A6@mollari.NetBSD.org>
Date: Sun, 16 Apr 2017 12:21:43 +0000 (UTC)
From: n54@gmx.com
Reply-To: n54@gmx.com
To: gnats-bugs@NetBSD.org
Subject: syscallemu does not work on sparc (32-bit)
X-Send-Pr-Version: www-1.0
>Number: 52166
>Category: kern
>Synopsis: syscallemu does not work on sparc (32-bit)
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: kern-bug-people
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sun Apr 16 12:25:00 +0000 2017
>Closed-Date: Thu Mar 23 08:34:25 +0000 2023
>Last-Modified: Thu Mar 23 08:34:25 +0000 2023
>Originator: Kamil Rytarowski
>Release: NetBSD 7.99.69
>Organization:
TNF
>Environment:
NetBSD 7.99.69 (GENERIC) #0: Sat Apr 15 17:30:02 UTC 2017 root@babylon5.netbsd.org:/tmp/bracket/build/2017.04.15.14.00.30-sparc/obj/sys/arch/sparc/compile/GENERIC
>Description:
t_ptrace_wait* tests fail with the syscallemu1 test.
It tries to intercept syscall, however it does not work on sparc (32-bit).
>How-To-Repeat:
Run test in: tests/lib/libc/sys
atf-run t_ptrace_wait*|atf-report
>Fix:
N/A
>Release-Note:
>Audit-Trail:
From: "Kamil Rytarowski" <kamil@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/52166 CVS commit: src/tests/lib/libc/sys
Date: Sun, 16 Apr 2017 12:32:03 +0000
Module Name: src
Committed By: kamil
Date: Sun Apr 16 12:32:03 UTC 2017
Modified Files:
src/tests/lib/libc/sys: t_ptrace_wait.c
Log Message:
Mark syscallemu1/t_ptrace_wait* broken on 32-bit sparc
PR kern/52166
To generate a diff of this commit:
cvs rdiff -u -r1.5 -r1.6 src/tests/lib/libc/sys/t_ptrace_wait.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
Responsible-Changed-From-To: kern-bug-people->kamil
Responsible-Changed-By: kamil@NetBSD.org
Responsible-Changed-When: Mon, 17 Jun 2019 14:35:49 +0200
Responsible-Changed-Why:
Take.
Responsible-Changed-From-To: kamil->kern-bug-people
Responsible-Changed-By: kamil@NetBSD.org
Responsible-Changed-When: Fri, 20 Nov 2020 11:26:30 +0100
Responsible-Changed-Why:
Reassign to kern-bug-people.
From: "Juergen Hannken-Illjes" <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/52166 CVS commit: src/sys/kern
Date: Wed, 29 Jun 2022 16:33:09 +0000
Module Name: src
Committed By: hannken
Date: Wed Jun 29 16:33:09 UTC 2022
Modified Files:
src/sys/kern: sys_syscall.c
Log Message:
Synchronize SYS_SYSCALL() with other syscall implementations and
call trace_exit() even if trace_enter() returned an error.
PR kern/52166 "syscallemu does not work on sparc (32-bit)"
PR toolchain/56117 "New test failures on amd64 since switch to gcc10"
To generate a diff of this commit:
cvs rdiff -u -r1.14 -r1.15 src/sys/kern/sys_syscall.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Juergen Hannken-Illjes" <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/52166 CVS commit: src
Date: Mon, 20 Mar 2023 11:19:30 +0000
Module Name: src
Committed By: hannken
Date: Mon Mar 20 11:19:30 UTC 2023
Modified Files:
src/sys/arch/sparc/sparc: syscall.c vm_machdep.c
src/tests/lib/libc/sys: t_ptrace_syscall_wait.h
Log Message:
Adjust pc/npc before syscall allowing EJUSTRETURN to return
to the next instruction. Only ERESTART should return to
the same instruction. Differences to sparc64 reduced.
Test t_ptrace_wait:syscallemu1 now passes on sparc.
Fixes PR kern/52166 "syscallemu does not work on sparc (32-bit)"
Ok: Martin Husemann
To generate a diff of this commit:
cvs rdiff -u -r1.31 -r1.32 src/sys/arch/sparc/sparc/syscall.c
cvs rdiff -u -r1.107 -r1.108 src/sys/arch/sparc/sparc/vm_machdep.c
cvs rdiff -u -r1.2 -r1.3 src/tests/lib/libc/sys/t_ptrace_syscall_wait.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/52166 CVS commit: [netbsd-10] src
Date: Wed, 22 Mar 2023 19:00:47 +0000
Module Name: src
Committed By: martin
Date: Wed Mar 22 19:00:47 UTC 2023
Modified Files:
src/sys/arch/sparc/sparc [netbsd-10]: syscall.c vm_machdep.c
src/tests/lib/libc/sys [netbsd-10]: t_ptrace_syscall_wait.h
Log Message:
Pull up following revision(s) (requested by hannken in ticket #124):
tests/lib/libc/sys/t_ptrace_syscall_wait.h: revision 1.3
sys/arch/sparc/sparc/syscall.c: revision 1.32
sys/arch/sparc/sparc/vm_machdep.c: revision 1.108
Adjust pc/npc before syscall allowing EJUSTRETURN to return
to the next instruction. Only ERESTART should return to
the same instruction. Differences to sparc64 reduced.
Test t_ptrace_wait:syscallemu1 now passes on sparc.
Fixes PR kern/52166 "syscallemu does not work on sparc (32-bit)"
Ok: Martin Husemann
To generate a diff of this commit:
cvs rdiff -u -r1.31 -r1.31.30.1 src/sys/arch/sparc/sparc/syscall.c
cvs rdiff -u -r1.107 -r1.107.70.1 src/sys/arch/sparc/sparc/vm_machdep.c
cvs rdiff -u -r1.2 -r1.2.2.1 src/tests/lib/libc/sys/t_ptrace_syscall_wait.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: hannken@NetBSD.org
State-Changed-When: Thu, 23 Mar 2023 08:34:25 +0000
State-Changed-Why:
Fixed in head, pullup to -10 complete.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.49 2026/05/14 01:52:41 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.