Synchronize SYS_SYSCALL() with other syscall implementations and call trace_exit() even if trace_enter() returned an error.

PR kern/52166 "syscallemu does not work on sparc (32-bit)"
PR toolchain/56117 "New test failures on amd64 since switch to gcc10"